fix url with parameters